Try harder to find an appropriate parent for the kwallet password dialog.

Based on a suggestion of Lubos, should fix #133861 and might also help
with #131756.

BUG: 133861
CCBUG: 131756

svn path=/branches/KDE/3.5/kdepim/; revision=593938